# Viccyware

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE-README  README.md  VICTOR_COMPAT_VERSION  godeps.json  reset-viccyware.sh  update-viccyware.sh
.github/workflows/: make_victor.yml
cannedAnimLib/baseTypes/: keyframe.h  track.cpp
cannedAnimLib/cannedAnims/: spriteBoxCompositor.cpp
cannedAnimLib/proceduralFace/: proceduralFace.cpp  proceduralFace.h  proceduralFaceDrawer.cpp
cloud/: BUILD.in  CMakeLists.txt
cmake/: signalessence.cmake  vicos.oelinux.toolchain.cmake
contrib/rickroll/: install.sh  rickroll.py  rickroll.service
coretech/neuralnets/: CMakeLists.txt
coretech/vision/: CMakeLists.txt
docker/: build-v.sh
engine/: robot.cpp  robotToEngineImplMessaging.h
engine/aiComponent/: aiComponent.cpp  aiWhiteboard.cpp  alexaComponent.cpp  puzzleComponent.cpp
engine/components/: animationComponent.cpp  animationComponent.h  lightsConfig.h  settingsCommManager.cpp  visionComponent.cpp
engine/moodSystem/: moodManager.cpp
engine/utils/: cozmoExperiments.cpp
engine/vision/: visionSystem.cpp
lib/audio/: CMakeLists.txt
lib/audio/mayaWwisePlugin/: CMakeLists.txt
lib/audio/mayaWwisePlugin/source/: mayaAudioController.cpp  mayaAudioController.h  plugin.cpp  plugin.h
lib/audio/mayaWwisePlugin/source/pluginCommands/: updateMarkerDataCmd.cpp  updateMarkerDataCmd.hpp
osState/: osState_vicos.cpp
platform/config/: CMakeLists.txt
platform/faultCodeDisplay/: faultCodeDisplay.cpp
platform/update-engine/: update-engine.py
project/buildScripts/: binary_conversion.py  dependencies.py
pv_ipc/: vic-build.sh
robot/core/src/: lcd.c
wire/: build.sh  cbd.sh
(+201 files in other folders)
